<resources>
    <string name="app_name">ICAR-CRIDA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment sfds dsfdsf dsfdsf dsfdfdsf</string>
    <string name="introduction" formatted="false">
        <![CDATA[
  Rainfed Agriculture occupies very prominent position in Indian Agriculture. It supports 40% of the India\'s population and contributes 40% to the national food basket. Unlike irrigated areas, where the green revolution ushered significant gains in productivity, rainfed regions continue to suffer from low productivity (< 1 t/ha) due to uncertain rainfall, frequent droughts, degraded soils etc. Increasing climatic variability and climate change pose new challenges in the form of changes in rainfall and temperature patterns coupled with more extreme weather events.
        <p>From the initial efforts of dry farming research at Manjari, Pune in 1923, impetus on dryland agriculture increased over time. A major development was establishment of All India Coordinated Research Project for Dryland Agriculture (AICRPDA) in 1970. To give further boost to basic and strategic research in dryland agriculture, the Indian Council of Agricultural Research (ICAR) established a full-fledged institute Central Research Institute for Dryland Agriculture (CRIDA) at Hyderabad in 1985. Since then, significant contributions have been made in rainfed regions for enhancing the agricultural productivity, conservation and sustainable use of natural resources. CRIDA has successfully executed the National Agricultural Technology Project (NATP) of ICAR by leading the Directorate of Rainfed Agro-ecosystem during 1998-2005. Under National Agricultural Innovation Project (NAIP) too, CRIDA has significantly contributed through basic, strategic and action research projects during 2007-2013.</p>
         <p>Realizing the importance of climate change on Indian agriculture vis-a-vis food security, ICAR initiated a Network Project on Climate Change (NPCC) in 2006 to address climate change related issues of agriculture across the country. Subsequently, ICAR launched the National Initiative on Climate Resilient Agriculture (NICRA) during XI plan with CRIDA as the nodal institute. The main aim of the NICRA is to enhance the resilience of Indian agriculture covering crops, livestock, poultry and fisheries to climate variability and climate change by developing improved production technologies and risk management strategies. By leading two coordinated projects and one large network project, the institute is playing a key role in planning, coordinating and implementing research in key areas of rainfed agriculture and climate change with nationwide foot print. To address the location-specific problems of rainfed areas, ICAR started AICRPDA in 1970 across 22 (presently 25) centres in rainfed regions of the country with the headquarters at Hyderabad.  All India Coordinated Research Project on Agrometeorology (AICRPAM) was started in 1983 for understanding crop-weather relations. Started with 10 centres, AICRPAM now has 25 centres spread across all regions of the country.</p>
        ]]>
    </string>
    <string name="mandate" formatted="false">
<![CDATA[
        •Undertake basic and applied research that will contribute to the development of strategies for sustainable farming systems in the rainfed areas <br></br>
    •Act as a repository of information on rainfed agriculture in the country <br></br>
    •Provide leadership and co-ordinate network research with state agricultural universities for generating location-specific technologies for rainfed areas <br></br>
    •Act as a centre for training in rainfed-farming systems, and •Collaborate with relevant national and international agencies in achieving the above objectives<br></br>
]]>
    </string>
    <string name="location" formatted="false">
        <![CDATA[
       The institute is located at Santoshnagar in the historic city of Hyderabad, about 25 km from airport, 16 km from Secunderabad railway station and 7 km from Hyderabad railway station.
        ]]>
    </string>
    <string name="human_resource" formatted="false">
        <![CDATA[
       Sixty-seven scientists from various disciplines assisted by well-trained technical staff (72) are actively involved in implementing the mandated activities of the institute. Administrative (43) and skilled supporting staff (39) lend the need-based support in facilitating research activities. In addition, more than 100 post-graduates in agriculture and allied disciplines support the scientists as staff in various schemes.
        ]]>
    </string>
    <string name="organization" formatted="false">
        <![CDATA[
       CRIDA is organized with an inter-disciplinary structure and has strong focus on on-farm participatory research with a large portion of its resources devoted to outreach programmes.
        ]]>
    </string>
    <string name="road_map_for_future" formatted="false">
        <![CDATA[
       • Continue to address critical problems of rainfed agriculture through basic and strategic research using frontier tools <br></br>
• Promote cost-effective water harvesting and recycling technologies for supplemental irrigation and drought-proofing of rainfed crops <br></br>
• Application of biotechnological tools for inducing drought tolerance in rainfed crops and enhancing input use efficiency <br></br>
• Rehabilitation of marginal and wastelands through crop diversification and alternate land use systems <br></br>
• Development of agro-techniques including farming system modules for enhanced productivity and profitability in rainfed regions <br> </br>
• Design and development of efficient implements for small farm mechanization and their increased accessibility to small farmers through custom hiring centres <br></br>
• Undertake action research to evolve innovations in technology dissemination and up-scaling for enhancing livelihood security <br></br>
• Carry out impact assessment of technologies and suggest policy reforms for better adoption of technologies in rainfed agriculture <br></br>
• Develop linkages and collaborate with national and international agencies in advancing rainfed agriculture <br></br>

        ]]>
    </string>
    <string name="nicra" formatted="false">
        <![CDATA[
      CRIDA coordinates the national programme on climate change across the Country with the following two key objectives: <br></br>
• Enhance the resilience of rainfed agriculture to climate change by developing adaptation and mitigation strategies in crop and livestock systems <br></br>
• Develop climate smart villages in India by promoting practices that efficiently use weather, soil, water and energy resources <br></br>
        ]]>
    </string>
    <string name="contact_address" formatted="false">
        <![CDATA[
      Our Contact Address <br></br>
Director<br></br>
CENTRAL RESEARCH INSTITUTE FOR DRYLAND AGRICULTURE <br></br>
Santoshnagar, Hyderabad - 500 059. A.P., India. Ph : +91 -040 24532243,  24530161 <br></br>
Fax : +91 -040 24531802,  24535336 Website : www.crida.res.in, E-mail : director.crida@icar.gov.in <br></br>
        ]]>
    </string>
    <string name="laboratories" formatted="false">
        <![CDATA[
      CRIDA has 15 well-equipped laboratories to support multi-disciplinary research on natural resource management and crop sciences. Laboratories of various disciplines such as Agronomy, Soil chemistry, Soil physics, Hydrology, Plant physiology, Microbiology, Plant breeding, Molecular biology, Agroforestry, Horticulture, Plant pathology, Entomology and Animal sciences are well equipped with state-ofthe-art facilities. In addition, Central laboratory, Agrometeorology Data bank, and GIS laboratories cater to the needs of research across the divisions.  Dedicated laboratories for root study and estimation of green house gases were added during XI plan.
        ]]>
    </string>
    <string name="glass_house" formatted="false">
        <![CDATA[
      The transgenic glass house of the institute conforms to containment standards for evaluating transgenic crops. In addition, a well maintained net house and climate controlled green house are available for pot experiments.
        ]]>
    </string>
    <string name="climate_change" formatted="false">
        <![CDATA[
      Six Open Top Chambers (OTCs) were set up to assess the impact of elevated CO2 concentration on crops and soils. State-of-the-art Phenotyping Platform with automated non-destructive imaging based scan analysis of crop growth and development has been developed during XI plan to characterize genetic material with drought and other abiotic stress tolerances. A 7 ha research complex to study crop and soil response to elevated temperature, CO2 and extreme rainfall events has been developed at Hayatnagar research farm.
        ]]>
    </string>
    <string name="agrometerology_data_bank" formatted="false">
        <![CDATA[
       The AICRPAM is maintaining long-term meteorological and crop yield data for different agro-climatic regions of the country. It hosts a website www.cropweatheroutlook.in that provides crop-weather status and value added agro-advisories. Contingency crop planning for various rainfed regions is being updated every week on the website for the benefit of rainfed farmers and state line department officers.
        ]]>
    </string>
    <string name="library" formatted="false">
        <![CDATA[
        The institute\'s library has a collection of over 8187 books and 4719 back volumes of periodicals. It subscribes to 132 Indian and 21 foreign journals and is equipped with AGRICOLA, AGRIS, CROP-CD and Soil-CD databases. The library extends on-line access of over 2000 peer reviewed journals through e-CeRA, Agroforestry abstracts and Science Direct.
        ]]>
    </string>
    <string name="akmu" formatted="false">
        <![CDATA[
        Agriculture Knowledge Management Unit (AKMU): <br></br>It provides e-mail, web-hosting, internet and file transfer services to institute scientists and other officers. The Government of India has provided National Knowledge Network (NKN) connectivity to CRIDA. Video conferencing facility has been established with AICRP centres.
        ]]>
    </string>
    <string name="title_about_us">About Us</string>
    <string name="title_location">Location</string>
    <string name="title_mandate">Mandate</string>
    <string name="title_organization">Organization</string>
    <string name="title_human_resource">Human Resource</string>
    <string name="title_infrastructure">Infrastructure</string>
    <string name="title_road_map_for_future">Road Map for Future</string>
    <string name="title_nicra">NICRA</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_laboraturies">Laboratories</string>
    <string name="title_glass_house">Glass House and Net Houses</string>
    <string name="title_climate_change_research_facilities">Climate Change Research Facilities</string>
    <string name="title_agrometeorology_databank">Agrometeorology Databank</string>
    <string name="title_library">Library</string>
    <string name="title_AKMU">AKMU</string>
    <string name="title_ITMU">ITMU</string>
    <string name="title_research_farms">Research Farms</string>
    <string name="title_conference_facilities">Conference Facilities</string>
    <string name="title_museum">Museum</string>
    <string name="title_guest">Guest House</string>
    <string name="title_achievements">Achievements</string>
    <string name="title_training_consultancies">Training,Consultancies</string>
    <string name="title_team">Team</string>
    <string name="title_copy_right">Copyright</string>
    <string name="title_disclaimer">Disclaimer</string>
    <string name="title_statement">Privacy Statement</string>
</resources>